# Bitcoin-Explorer

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  package-lock.json  package.json
backend/src/: index.ts
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: About.css  About.tsx  BitcoinDominance.tsx  BitcoinPrice.tsx  BitcoinPriceChart.tsx  BitcoinVolume.tsx  BlockHeight.css  BlockHeight.tsx  FearGreedIndex.tsx  Header.css  Header.tsx  MetricsSection.css  MetricsSection.tsx  PricesPage.tsx  TransactionCountChart.tsx
ingestion/: .gitignore  Cargo.toml  Dockerfile
ingestion/src/: main.rs
