[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"]}
tokio-postgres = { version = "0.7", features = ["runtime"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
